function(add_tinyfsm_example name)
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} PRIVATE tinyfsm)
endfunction()
add_tinyfsm_example(debugging_switch)
add_tinyfsm_example(mealy_machine)
add_tinyfsm_example(moore_machine)
add_tinyfsm_example(multiple_switch)
add_tinyfsm_example(resetting_switch)
add_tinyfsm_example(simple_switch)
